app_list: resize launcher search icon image to proper size

context:
In crbug.com/490597, 2x image is used for HiDPI blur issue. Then there
is a CL "Migrate LauncherSearchResult to use SetBadgeIcon", 
https://codereview.chromium.org/1200543003, which I think it removes
the proper handling of the size of this 2x loading.

changes:
When custom icon is loaded, resize it to proper size.

HiDPI screenshot: https://screenshot.googleplex.com/2rWk8akUx99

Test: tested that it works fine now,
screenshot: https://screenshot.googleplex.com/u9BapUpenhu
Bug: 723021
Change-Id: If18a59e7aaeed48e9a0e88409f8672d057eb986a
Reviewed-on: https://chromium-review.googlesource.com/592415
Reviewed-by: Steven Bennetts <stevenjb@chromium.org>
Reviewed-by: Yuki Awano <yawano@chromium.org>
Commit-Queue: Qiang(Joe) Xu <warx@chromium.org>
Cr-Commit-Position: refs/heads/master@{#490707}
Former-commit-id: 5d2ce5fc2424a8a9fb2d866557e2c3acbe0ae7ce